--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ color: white;
 
 }
 .foot button{
-    border: 1px solid white;
+    border: 1px solid black;
     word-spacing: 5px;
     border-radius: 30px;
     margin-left: 10px;
